objects/Matchback_New__c.object
<CustomObject>
    <fields>
        <fullName>Matchback_Date__c</fullName>
        <label>Retail Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matchback_Status__c</fullName>
        <label>Matchback Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Matched to Dealer</fullName>
                </value>
                <value>
                    <fullName>Matched to other Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Matchback New</relationshipLabel>
        <relationshipName>Matchback_New</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>RDR_Sales__c</fullName>
        <label>RDR Sales</label>
        <referenceTo>RDR_Sales__c</referenceTo>
        <relationshipLabel>Matchback New</relationshipLabel>
        <relationshipName>Matchback_New</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Matchback New</label>
    <nameField>
        <displayFormat>Matchback - {0000000}</displayFormat>
        <label>Matchback New Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matchback New</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>